# VRX-2019

./: README.md
communicationSystems/biggie_comms/: CMakeLists.txt  package.xml
communicationSystems/biggie_comms/scripts/: get_heart_beat.py
communicationSystems/custom_messages_biggie/: CMakeLists.txt  package.xml
communicationSystems/custom_messages_biggie/msg/: control_effort.msg  control_target.msg  waypoint_array.msg
highLevelSystems/missionPlannerBiggie/: README.md
highLevelSystems/missionPlannerBiggie/high_to_low/: CMakeLists.txt  package.xml
highLevelSystems/missionPlannerBiggie/the_planner/: CMakeLists.txt  package.xml
highLevelSystems/missionPlannerBiggie/the_planner/include/the_planner/: Missions.h  highLevelPlanner.h  objects.h
highLevelSystems/missionPlannerBiggie/the_planner/include/the_planner/initialTrajectory/: initial_trajectory.h
highLevelSystems/missionPlannerBiggie/the_planner/include/the_planner/missions/: acoustics_channel.h  buoy_field.h  follow_the_leader.h  listen_to_gui.h  navigation_channel.h  slalom_mission.h  speed_gate_mission.h  tester.h  totems.h
highLevelSystems/missionPlannerBiggie/the_planner/include/the_planner/missions/backup/: acoustics_channel2.h
highLevelSystems/missionPlannerBiggie/the_planner/launch/: the_planner.launch
highLevelSystems/missionPlannerBiggie/the_planner/msg/: line.msg  selectedCSP.msg  waypoint_list.msg
highLevelSystems/missionPlannerBiggie/the_planner/scripts/: slalom.py
highLevelSystems/missionPlannerBiggie/the_planner/src/: Missions.cpp  highLevelPlanner.cpp  plannerV3.cpp  speed_gate_backup.cpp
highLevelSystems/missionPlannerBiggie/the_planner/src/initialTrajectory/: init_traj_server.cpp  initial_trajectory.cpp  trajGen.m
highLevelSystems/missionPlannerBiggie/the_planner/src/missions/: Session.vim  acoustics_channel.cpp  buoy_field.cpp  follow_the_leader.cpp  listen_to_gui.cpp  navigation_channel.cpp  sim_persist_table.cpp  slalom_mission.cpp  speed_gate_mission.cpp  testPrimatives.cpp  tester.cpp  totems.cpp  totems_full.cpp  totems_simple.cpp  totems_vehicle.cpp  upAndBackSK.cpp  upAndBackTRAJ.cpp
highLevelSystems/missionPlannerBiggie/the_planner/src/missions/backup/: acoustics_channel2.cpp  totems.cpp  totems_simple.cpp
highLevelSystems/missionPlannerBiggie/the_planner/srv/: initTraj.srv
highLevelSystems/missionPlannerBiggie/the_planner/yaml/: boundingBox.yaml  missions.yaml  missions.yaml.orig
highLevelSystems/usbl/: CMakeLists.txt  package.xml
highLevelSystems/usbl/launch/: usbl.launch
highLevelSystems/usbl/msg/: usbl.msg
highLevelSystems/usbl/src/: usbl_driver.cpp  usbl_driver.cpp.backup
highLevelSystems/usbl/yaml/: usbl.yaml
highLevelSystems/usv16_blm_extra/: CMakeLists.txt  package.xml
highLevelSystems/usv16_blm_extra/launch/: usv16_blm_exta.launch
highLevelSystems/usv16_blm_extra/src/: blm_extra_node.cpp
highLevelSystems/visionSystemsBiggie/biggie_lidar/: CMakeLists.txt  package.xml
highLevelSystems/visionSystemsBiggie/cluster_classifier/: CMakeLists.txt  package.xml
highLevelSystems/visionSystemsBiggie/color_classification/: CMakeLists.txt  package.xml  readme
highLevelSystems/visionSystemsBiggie/color_detection/: CMakeLists.txt  package.xml  readme
highLevelSystems/visionSystemsBiggie/rgbd_fusion/: CMakeLists.txt  package.xml
highLevelSystems/visionSystemsBiggie/shape_detector/: CMakeLists.txt  CMakeLists.txt.save  package.xml
highLevelSystems/visionSystemsBiggie/shape_detector/src/: shape_detector_node.cpp
highLevelSystems/visionSystemsBiggie/usv_ahc_py/: CMakeLists.txt  package.xml
lowLevelSystems/lowLevelBiggie/: README.md
lowLevelSystems/lowLevelBiggie/vehicle_allocation/: CMakeLists.txt  package.xml
lowLevelSystems/lowLevelBiggie/vehicle_control/: CMakeLists.txt  package.xml
lowLevelSystems/lowLevelBiggie/vehicle_control/config/: control.yaml  fully_actuated.yaml  pid.yaml  sm_sk.yaml  under_actuated.yaml
lowLevelSystems/lowLevelBiggie/vehicle_control/include/vehicle_control/: pid_controller.h  sliding_mode_station_keeping.h
lowLevelSystems/lowLevelBiggie/vehicle_control/launch/: backup.sim_pid_control.launch  pid_control.launch  sim_pid_control.launch  sim_sm_control.launch
lowLevelSystems/lowLevelBiggie/vehicle_control/src/: pid_controller.cpp  ros_control_node.cpp  sliding_mode_station_keeping.cpp  sliding_mode_station_keeping_main.cpp
lowLevelSystems/lowLevelBiggie/vehicle_state/: CMakeLists.txt  package.xml
lowLevelSystems/vehicleSupportBiggie/: README.md
lowLevelSystems/vehicleSupportBiggie/battery_info/: CMakeLists.txt  package.xml
lowLevelSystems/vehicleSupportBiggie/clear_water/: CMakeLists.txt  package.xml
lowLevelSystems/vehicleSupportBiggie/light_tower/: CMakeLists.txt  package.xml
lowLevelSystems/vehicleSupportBiggie/tf_tree/: CMakeLists.txt  package.xml
lowLevelSystems/vehicleSupportBiggie/usv16_blm/: CMakeLists.txt  package.xml
lowLevelSystems/vehicleSupportBiggie/vehicle_compass/: CMakeLists.txt  compassInfo.txt  package.xml
lowLevelSystems/vehicleSupportBiggie/vehicle_compass/include/vehicle_compass/: compass_class.h
lowLevelSystems/vehicleSupportBiggie/vehicle_compass/src/: compass_class.cpp  compass_main.cpp
lowLevelSystems/wamv_navigation/: CMakeLists.txt  README.md  package.xml
lowLevelSystems/wamv_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_global_laser.yaml  costmap_local.yaml  planner.backup.yaml  planner.yaml
lowLevelSystems/wamv_navigation/launch/: .move_base.launch.swp  move_base.backup.launch  move_base.launch  move_base_mapless_demo.launch  vehicle_sim.launch
lowLevelSystems/wamv_navigation/src/: NavigationDescription.txt  circle.m  circle_me.backup.cpp  circle_me.cpp  multiple_goals.cpp  odom_to_base.cpp  path_to_goal.backup.cpp  path_to_goal.backup2.cpp  path_to_goal.cpp  path_to_ned.backup.cpp  path_to_ned.cpp  sendArrayGoals.cpp  sendSingleGoal.backup.cpp  sendSingleGoal.cpp  update_costmap_fast.cpp
lowLevelSystems/wamv_navigation/srv/: CircleTarget.backup.srv  CircleTarget.srv  SendGoal.srv
vrx/.hg/: dirstate  hgrc  undo.desc
(+198 files in other folders)
